--- a/stable/console/Chart.yaml
+++ b/stable/console/Chart.yaml
@@ -1,5 +1,8 @@
 apiVersion: v1
-appVersion: 1.5.2
-description: A Helm chart for deploying Stratos UI Console
+appVersion: 2.0.0
+description: A Helm chart for deploying SUSE Stratos Console
+icon: https://raw.githubusercontent.com/SUSE/stratos/custom-src/deploy/kubernetes/icon.png
 name: console
-version: 2.7.0
+sources:
+- https://github.com/SUSE/stratos
+version: 3.0.0
