--- a/stable/cert-exporter/templates/deployment.yaml
+++ b/stable/cert-exporter/templates/deployment.yaml
@@ -51,3 +51,7 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
