--- a/stable/cert-exporter/templates/serviceaccount.yaml
+++ b/stable/cert-exporter/templates/serviceaccount.yaml
@@ -1,8 +1,21 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "cert-exporter.serviceAccountName" . }}
+  name: {{ template "cert-exporter.fullname" . }}-nodes
+  namespace: {{ .Release.Namespace }}
   labels:
-{{ include "cert-exporter.labels" . | indent 4 }}
-{{- end -}}
+    chart: {{ include "cert-exporter.chart" . }}
+    app: {{ include "cert-exporter.name" . }}
+    heritage: {{ .Release.Name }}
+    release: {{ .Release.Service }}
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ template "cert-exporter.fullname" . }}-secret
+  namespace: {{ .Release.Namespace }}
+  labels:
+    chart: {{ include "cert-exporter.chart" . }}
+    app: {{ include "cert-exporter.name" . }}
+    heritage: {{ .Release.Name }}
+    release: {{ .Release.Service }}
