--- a/stable/cert-exporter/templates/clusterrolebinding.yaml
+++ b/stable/cert-exporter/templates/clusterrolebinding.yaml
@@ -1,12 +1,25 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "cert-exporter.fullname" . }}
-subjects:
-- kind: ServiceAccount
-  name: {{ template "cert-exporter.serviceAccountName" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "cert-exporter.fullname" . }}-nodes
 roleRef:
   kind: ClusterRole
-  name: {{ template "cert-exporter.name" . }}-secret-reader
+  name: {{ template "cert-exporter.name" . }}-nodes
   apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: ServiceAccount
+  name: {{ template "cert-exporter.fullname" . }}-nodes
+  namespace: {{ .Release.Namespace }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "cert-exporter.fullname" . }}-secret
+roleRef:
+  kind: ClusterRole
+  name: {{ template "cert-exporter.name" . }}-secret
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: ServiceAccount
+  name: {{ template "cert-exporter.fullname" . }}-secret
+  namespace: {{ .Release.Namespace }}
