--- a/stable/cert-exporter/templates/secret-deployment.yaml
+++ b/stable/cert-exporter/templates/secret-deployment.yaml
@@ -1,14 +1,12 @@
 apiVersion: apps/v1
-kind: DaemonSet
+kind: Deployment
 metadata:
-  name: {{ include "cert-exporter.fullname" . }}-nodes
+  name: {{ include "cert-exporter.fullname" . }}-secret
   namespace: {{ .Release.Namespace }}
-  labels:
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app: {{ include "cert-exporter.name" . }}
-    heritage: {{ .Release.Name }}
-    release: {{ .Release.Service }}
+  labels: 
+{{- include "cert-exporter.labels" . | nindent 4 }}  
 spec:
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: {{ include "cert-exporter.name" . }}
@@ -26,19 +24,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
-      serviceAccountName: {{ template "cert-exporter.fullname" . }}-nodes
-      tolerations:
-        - key: node-role.kubernetes.io/master
-          effect: NoSchedule
-      volumes:
-        - name: kubelet-pki
-          hostPath:
-            path: /var/lib/kubelet/pki
-            type: Directory
-        - name: kube-pki
-          hostPath:
-            path: /etc/kubernetes
-            type: Directory
+      serviceAccountName: {{ template "cert-exporter.fullname" . }}-secret
       containers:
         - name: {{ .Chart.Name }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -51,23 +37,17 @@ spec:
             - --include-cert-glob=/etc/kubernetes/pki/etcd/*.crt
             - --include-cert-glob=/var/lib/kubelet/pki/*.crt
             - --alsologtostderr
-          env:
-            - name: NODE_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: spec.nodeName
           ports:
             - name: http
               containerPort: 8080
               protocol: TCP
-          volumeMounts:
-            - mountPath: /var/lib/kubelet/pki
-              name: kubelet-pki
-              readOnly: true
-            - mountPath: /etc/kubernetes
-              name: kube-pki
-              readOnly: true
-          securityContext:
-            runAsUser: 0
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
