--- a/stable/cert-exporter/templates/node-daemonset.yaml
+++ b/stable/cert-exporter/templates/node-daemonset.yaml
@@ -1,15 +1,11 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: DaemonSet
 metadata:
-  name: {{ include "cert-exporter.fullname" . }}-secret
+  name: {{ include "cert-exporter.fullname" . }}-node
   namespace: {{ .Release.Namespace }}
-  labels: 
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app: {{ include "cert-exporter.name" . }}
-    heritage: {{ .Release.Name }}
-    release: {{ .Release.Service }}
+  labels:
+{{- include "cert-exporter.labels" . | nindent 4 }}  
 spec:
-  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: {{ include "cert-exporter.name" . }}
@@ -27,7 +23,19 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
-      serviceAccountName: {{ template "cert-exporter.fullname" . }}-secret
+      serviceAccountName: {{ template "cert-exporter.fullname" . }}-node
+      tolerations:
+        - key: node-role.kubernetes.io/master
+          effect: NoSchedule
+      volumes:
+        - name: kubelet-pki
+          hostPath:
+            path: /var/lib/kubelet/pki
+            type: Directory
+        - name: kube-pki
+          hostPath:
+            path: /etc/kubernetes
+            type: Directory
       containers:
         - name: {{ .Chart.Name }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -40,17 +48,23 @@ spec:
             - --include-cert-glob=/etc/kubernetes/pki/etcd/*.crt
             - --include-cert-glob=/var/lib/kubelet/pki/*.crt
             - --alsologtostderr
+          env:
+            - name: NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
           ports:
             - name: http
               containerPort: 8080
               protocol: TCP
+          volumeMounts:
+            - mountPath: /var/lib/kubelet/pki
+              name: kubelet-pki
+              readOnly: true
+            - mountPath: /etc/kubernetes
+              name: kube-pki
+              readOnly: true
+          securityContext:
+            runAsUser: 0
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
