Fix deployment flag
Signed-off-by: JenTing Hsiao <jenting.hsiao@suse.com>

--- a/stable/cert-exporter/templates/node-podsecuritypolicy.yaml
+++ b/stable/cert-exporter/templates/node-podsecuritypolicy.yaml
@@ -15,7 +15,9 @@ spec:
   fsGroup:
     rule: RunAsAny
   volumes:
-    - "hostPath"
+    - configMap
+    - secret
+    - hostPath
   privileged: false
   allowedHostPaths:
     - pathPrefix: /var/lib/kubelet/pki
