--- a/stable/cert-exporter/templates/secret-deployment.yaml
+++ b/stable/cert-exporter/templates/secret-deployment.yaml
@@ -31,11 +31,10 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["./app"]
           args:
-            - --include-kubeconfig-glob=/etc/kubernetes/*.conf
-            - --exclude-kubeconfig-glob=/etc/kubernetes/kubelet.conf
-            - --include-cert-glob=/etc/kubernetes/pki/*.crt
-            - --include-cert-glob=/etc/kubernetes/pki/etcd/*.crt
-            - --include-cert-glob=/var/lib/kubelet/pki/*.crt
+            - --secrets-namespace=kube-system
+            - --secrets-label-selector=monitor-cert
+            - --secrets-include-glob=*.crt
+            - --secrets-exclude-glob=tls.key
             - --alsologtostderr
           ports:
             - name: http
