Change command name
Signed-off-by: JenTing Hsiao <jenting.hsiao@suse.com>

--- a/stable/cert-exporter/templates/node-daemonset.yaml
+++ b/stable/cert-exporter/templates/node-daemonset.yaml
@@ -40,7 +40,7 @@ spec:
         - name: {{ .Chart.Name }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["./app"]
+          command: ["cert-exporter"]
           args:
             - --include-kubeconfig-glob=/etc/kubernetes/*.conf
             - --exclude-kubeconfig-glob=/etc/kubernetes/kubelet.conf
