--- a/stable/cert-exporter/templates/secret-deployment.yaml
+++ b/stable/cert-exporter/templates/secret-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels: 
 {{- include "cert-exporter.labels" . | nindent 4 }}  
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
       app: {{ include "cert-exporter.name" . }}
