--- a/stable/cert-exporter/templates/secret-deployment.yaml
+++ b/stable/cert-exporter/templates/secret-deployment.yaml
@@ -29,7 +29,8 @@ spec:
         - name: {{ .Chart.Name }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["cert-exporter"]
+          command:
+            - cert-exporter
           args:
             - --secrets-namespace=kube-system
             - --secrets-label-selector=monitor-cert
