--- a/stable/cert-exporter/templates/secret-deployment.yaml
+++ b/stable/cert-exporter/templates/secret-deployment.yaml
@@ -33,7 +33,7 @@ spec:
             - cert-exporter
           args:
             - --secrets-namespace=kube-system
-            - --secrets-label-selector=monitor-cert
+            - --secrets-label-selector=caasp.suse.com/skuba-addon
             - --secrets-include-glob=*.crt
             - --secrets-exclude-glob=tls.key
             - --alsologtostderr
