--- a/stable/cert-exporter/templates/custom-secret-certs-clusterrole.yaml
+++ b/stable/cert-exporter/templates/custom-secret-certs-clusterrole.yaml
@@ -1,7 +1,8 @@
+{{- if .Values.customSecret.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "cert-exporter.fullname" . }}-secret
+  name: {{ include "cert-exporter.fullname" . }}-custom-secret
   labels:
 {{- include "cert-exporter.labels" . | nindent 4 }}  
 rules:
@@ -12,3 +13,4 @@ rules:
   verbs:
   - "get"
   - "list"
+{{- end }}
