--- a/stable/cert-exporter/templates/addon-certs-clusterrolebinding.yaml
+++ b/stable/cert-exporter/templates/addon-certs-clusterrolebinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "cert-exporter.fullname" . }}-secret
+  name: {{ include "cert-exporter.fullname" . }}-addon
 roleRef:
   kind: ClusterRole
-  name: {{ template "cert-exporter.name" . }}-secret
+  name: {{ template "cert-exporter.name" . }}-addon
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
-  name: {{ template "cert-exporter.fullname" . }}-secret
+  name: {{ template "cert-exporter.fullname" . }}-addon
   namespace: {{ .Release.Namespace }}
