--- a/stable/cert-exporter/templates/custom-secret-certs-serviceaccount.yaml
+++ b/stable/cert-exporter/templates/custom-secret-certs-serviceaccount.yaml
@@ -1,7 +1,10 @@
+
+{{- if .Values.customSecret.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "cert-exporter.fullname" . }}-secret
+  name: {{ template "cert-exporter.fullname" . }}-custom-secret
   namespace: {{ .Release.Namespace }}
   labels:
 {{- include "cert-exporter.labels" . | nindent 4 }}  
+{{- end }}
