--- a/stable/cert-exporter/templates/node-certs-podsecuritypolicy.yaml
+++ b/stable/cert-exporter/templates/node-certs-podsecuritypolicy.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.node.enabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
@@ -22,3 +23,4 @@ spec:
       readOnly: true
     - pathPrefix: /etc/kubernetes
       readOnly: true
+{{- end }}
