--- a/stable/cert-exporter/templates/node-certs-serviceaccount.yaml
+++ b/stable/cert-exporter/templates/node-certs-serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.node.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -5,3 +6,4 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
 {{- include "cert-exporter.labels" . | nindent 4 }}  
+{{- end }}
