--- a/stable/cert-exporter/templates/addon-certs-clusterrolebinding.yaml
+++ b/stable/cert-exporter/templates/addon-certs-clusterrolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.addon.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -10,3 +11,4 @@ subjects:
 - kind: ServiceAccount
   name: {{ template "cert-exporter.fullname" . }}-addon
   namespace: {{ .Release.Namespace }}
+{{- end }}
