--- a/stable/cert-exporter/templates/addon-certs-deployment.yaml
+++ b/stable/cert-exporter/templates/addon-certs-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.addon.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -50,3 +51,4 @@ spec:
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
