--- a/stable/cert-exporter/templates/node-certs-clusterrole.yaml
+++ b/stable/cert-exporter/templates/node-certs-clusterrole.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.node.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -13,3 +14,4 @@ rules:
   - {{ include "cert-exporter.fullname" . }}-node
   verbs:
   - use
+{{- end }}
