Support multiple custom secret cert Deployments
Signed-off-by: JenTing Hsiao <jenting.hsiao@suse.com>

--- a/stable/cert-exporter/templates/custom-secret-certs-deployment.yaml
+++ b/stable/cert-exporter/templates/custom-secret-certs-deployment.yaml
@@ -1,60 +1,53 @@
 {{- if .Values.customSecret.enabled }}
+{{- range .Values.customSecret.certs }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "cert-exporter.fullname" . }}-custom-secret
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "cert-exporter.fullname" $ }}-custom-secret-{{ .name }}
+  namespace: {{ $.Release.Namespace }}
   labels: 
-{{- include "cert-exporter.labels" . | nindent 4 }}  
+{{- include "cert-exporter.labels" $ | nindent 4 }}  
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ include "cert-exporter.name" . }}
-      heritage: {{ .Release.Name }}
+      app: {{ include "cert-exporter.name" $ }}
+      heritage: {{ $.Release.Name }}
   template:
     metadata:
       annotations:
         prometheus.io/port: "8080"
         prometheus.io/scrape: "true"
       labels:
-        app: {{ include "cert-exporter.name" . }}
-        heritage: {{ .Release.Name }}
+        app: {{ include "cert-exporter.name" $ }}
+        heritage: {{ $.Release.Name }}
     spec:
-    {{- with .Values.imagePullSecrets }}
+    {{- with $.Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
-      serviceAccountName: {{ template "cert-exporter.fullname" . }}-custom-secret
+      serviceAccountName: {{ template "cert-exporter.fullname" $ }}-custom-secret
       containers:
-        - name: {{ .Chart.Name }}
-          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+        - name: {{ $.Chart.Name }}
+          image: {{ $.Values.image.repository }}:{{ $.Values.image.tag }}
+          imagePullPolicy: {{ $.Values.image.pullPolicy }}
           command:
             - cert-exporter
           args:
-          {{- if .Values.customSecret.namespace }}
-            - --secrets-namespace={{ .Values.customSecret.namespace }}
+          {{- if .namespace }}
+            - --secrets-namespace={{ .namespace }}
           {{- end }}
-          {{- with .Values.customSecret.includeKeys }}
-          {{- range $value := . }}
+          {{- range $value := .includeKeys }}
             - --secrets-include-glob={{ $value }}
           {{- end }}
-          {{- end }}
-          {{- with .Values.customSecret.excludeKeys }}
-          {{- range $value := . }}
+          {{- range $value := .excludeKeys }}
             - --secrets-exclude-glob={{ $value }}
           {{- end }}
-          {{- end }}
-          {{- with .Values.customSecret.labelSelector }}
-          {{- range $value := . }}
+          {{- range $value := .labelSelector }}
             - --secrets-label-selector={{ $value }}
           {{- end }}
-          {{- end }}
-          {{- with .Values.customSecret.annotationSelector }}
-          {{- range $value := . }}
+          {{- range $value := .annotationSelector }}
             - --secrets-annotation-selector={{ $value }}
-          {{- end }}
           {{- end }}
             - --alsologtostderr
           ports:
@@ -62,13 +55,15 @@ spec:
               containerPort: 8080
               protocol: TCP
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-      {{- with .Values.customSecret.nodeSelector }}
+            {{- toYaml $.Values.resources | nindent 12 }}
+      {{- with $.Values.customSecret.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.customSecret.affinity }}
+      {{- with $.Values.customSecret.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
- {{- end }}
+---
+{{- end }}
+{{- end }}
