--- a/stable/cert-exporter/values.yaml
+++ b/stable/cert-exporter/values.yaml
@@ -31,22 +31,24 @@ addon:
 # Deploy the Deployment(s) to monitors the custom secret certificates
 customSecret:
   enabled: false
-  # Name of the custom secret to create the Deployment resource.
-  # If you have multiple custom secret to monitoring, copy the below
-  # section and differs in name
-  - name: default
-    # Kubernetes namespace to list secrets (optional).
-    namespace:
-    # Secret globs to include when looking for secret data keys (optional).
-    includeKeys: []
-    # Secret globs to exclude when looking for secret data keys (optional).
-    excludeKeys: []
-    # Label selector to find secrets to publish as metrics (optional).
-    # Annotation selector to find secrets to publish as metrics (optional).
-    # If both labelSelector and annotationSelector configured, the cert-exporter
-    # search secrets with AND operation, which means the secrets are the intersects
-    # of labelSelector and annotationSelector.
-    labelSelector: []
-    annotationSelector: []
-    nodeSelector: {}
-    affinity: {}
+
+  certs:
+    # Name of the custom secret to create the Deployment resource.
+    # If you have multiple custom secret to monitoring, copy the below
+    # section and differs in name
+    - name: cert-manager
+      # Kubernetes namespace to list secrets (optional).
+      namespace:
+      # Secret globs to include when looking for secret data keys (optional).
+      includeKeys: []
+      # Secret globs to exclude when looking for secret data keys (optional).
+      excludeKeys: []
+      # Label selector to find secrets to publish as metrics (optional).
+      # Annotation selector to find secrets to publish as metrics (optional).
+      # If both labelSelector and annotationSelector configured, the cert-exporter
+      # search secrets with AND operation, which means the secrets are the intersects
+      # of labelSelector and annotationSelector.
+      labelSelector: []
+      annotationSelector: []
+      nodeSelector: {}
+      affinity: {}
