--- a/stable/metrics/values.yaml
+++ b/stable/metrics/values.yaml
@@ -1,8 +1,8 @@
 # Default values for stratos-metrics
 dockerRepository: registry.suse.com
-dockerOrganization: cap
+dockerOrganization: cap-staging
 dockerRegistrySecret: regsecret
-imageTag: 1.1.2-85daaa2-cap
+imageTag: 1.2.0-bc511c9-cap
 imagePullPolicy: IfNotPresent
 
 metrics:
@@ -19,6 +19,23 @@ metrics:
     #nodePort: 30000
     type: ClusterIP
     externalName:
+    ingress:
+      ## If true, Ingress will be created
+      enabled: false
+      ## Additional annotations
+      annotations: {}
+      ## Additional labels
+      extraLabels: {}
+      ## Host for the ingress
+      # Defaults to metrics.[env.Domain] if env.Domain is set and host is not
+      host:
+      # Name of secret containing TLS certificate
+      secretName:
+      # crt and key for TLS Certificate (this chart will create the secret based on these)
+      tls:
+        crt:
+        key:
+
   # Deprecated - use metrics.service.externalIPs
   externalIP:
 kubernetes:
@@ -128,6 +145,8 @@ env:
   # If DOMAIN is set, the CF API Endpoint will fallback to https://api.DOMAIN if not set
   DOMAIN:
 kube:
+  # Kubernetes Cluster domain (default is cluster.local)
+  clusterDomain:
   auth: "rbac"
   external_metrics_port: 7443
   registry:
@@ -145,31 +164,36 @@ prometheus:
     enabled: false
   configmapReload:
     image:
-      repository: registry.suse.com/cap/stratos-metrics-configmap-reload
-      tag: 1.1.2-85daaa2-cap
+      repository: registry.suse.com/cap-staging/stratos-metrics-configmap-reload
+      tag: 1.2.0-bc511c9-cap
   initChownData:
     image:
-      repository: registry.suse.com/cap/stratos-metrics-init-chown-data
-      tag: 1.1.2-85daaa2-cap
+      repository: registry.suse.com/cap-staging/stratos-metrics-init-chown-data
+      tag: 1.2.0-bc511c9-cap
   kubeStateMetrics:
     enabled: false
     image:
-      repository: registry.suse.com/cap/stratos-metrics-kube-state-metrics
-      tag: 1.1.2-85daaa2-cap
+      repository: registry.suse.com/cap-staging/stratos-metrics-kube-state-metrics
+      tag: 1.2.0-bc511c9-cap
   nodeExporter:    
     enabled: false
     image:
-      repository: registry.suse.com/cap/stratos-metrics-node-exporter
-      tag: 1.1.2-85daaa2-cap
+      repository: registry.suse.com/cap-staging/stratos-metrics-node-exporter
+      tag: 1.2.0-bc511c9-cap
   server:
     name: prometheus
     configMapOverrideName: stratos-metrics-config
     image:
-      repository: registry.suse.com/cap/stratos-metrics-prometheus
-      tag: 1.1.2-85daaa2-cap
+      repository: registry.suse.com/cap-staging/stratos-metrics-prometheus
+      tag: 1.2.0-bc511c9-cap
     replicaCount: 1
     service:
       servicePort: 9090
+    strategy:
+      type: RollingUpdate
+      rollingUpdate:
+        maxSurge: 0
+        maxUnavailable: 1
   serviceAccounts:
     alertmanager:
       create: false
