Stratos Release 3.1.0 Helm Chart Changes

--- a/stable/console/values.yaml
+++ b/stable/console/values.yaml
@@ -1,5 +1,5 @@
 # Tag for images - do not edit
-consoleVersion: 3.0.0-8fbc06b06-cap
+consoleVersion: 3.1.0-0d657242b-cap
 dockerRegistrySecret: regsecret
 
 # Provide Proxy settings if required
@@ -65,6 +65,12 @@ console:
 
   # Enable/disable Tech Preview
   techPreview: false
+
+  ui:
+    # Override the default maximum number of entities that a configured list can fetch. When a list meets this amount additional pages are not fetched 
+    listMaxSize:
+    # If the maximum list size is met give the user the option to fetch all results regardless
+    listAllowLoadMaxed: false
 
   # Use local admin user instead of UAA - set to a password to enable
   localAdminPassword: ~
