--- a/stable/console/templates/deployment.yaml
+++ b/stable/console/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
 {{- end }}
     spec:
       containers:
-      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.console}}:3.0.0-8fbc06b06-cap
+      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.console}}:3.1.0-0d657242b-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         name: ui
         ports:
@@ -65,7 +65,7 @@ spec:
         - mountPath: "/{{ .Release.Name }}-cert-volume"
           name: "{{ .Release.Name }}-cert-volume"
           readOnly: true
-      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.proxy}}:3.0.0-8fbc06b06-cap
+      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.proxy}}:3.1.0-0d657242b-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         name: proxy
         env:
@@ -255,6 +255,14 @@ spec:
           value: {{ default "" .Values.console.userInviteSubject | quote }}
         - name: ENABLE_TECH_PREVIEW
           value: {{ default "false" .Values.console.techPreview | quote }}
+        {{- if .Values.console.ui }}
+        {{- if .Values.console.ui.listMaxSize }}
+        - name: UI_LIST_MAX_SIZE
+          value: {{ .Values.console.ui.listMaxSize | quote }}
+        {{- end }}
+        - name: UI_LIST_ALLOW_LOAD_MAXED
+          value: {{ default "false" .Values.console.ui.listAllowLoadMaxed | quote }}
+        {{- end }}
         - name: MONOCULAR_CRT_PATH
           value: "/etc/monocular-certs/tls.crt"
         - name: MONOCULAR_KEY_PATH
