Use fullname to render clusterrole
Signed-off-by: JenTing Hsiao <jenting.hsiao@suse.com>

--- a/stable/cert-exporter/templates/addon-certs-clusterrolebinding.yaml
+++ b/stable/cert-exporter/templates/addon-certs-clusterrolebinding.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ include "cert-exporter.fullname" . }}-addon
 roleRef:
   kind: ClusterRole
-  name: {{ template "cert-exporter.name" . }}-addon
+  name: {{ template "cert-exporter.fullname" . }}-addon
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
