--- a/stable/cert-exporter/templates/custom-secret-certs-clusterrolebinding.yaml
+++ b/stable/cert-exporter/templates/custom-secret-certs-clusterrolebinding.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ include "cert-exporter.fullname" . }}-custom-secret
 roleRef:
   kind: ClusterRole
-  name: {{ template "cert-exporter.name" . }}-custom-secret
+  name: {{ template "cert-exporter.fullname" . }}-custom-secret
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
