--- a/stable/kubecf/Chart.yaml
+++ b/stable/kubecf/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: 2.0-RC1
+appVersion: 2.0.0-rc1
 description: A Helm chart for KubeCF
 name: kubecf
-version: 2.0-RC1
+version: 2.0.0-rc1
