--- a/stable/console/templates/config-init.yaml
+++ b/stable/console/templates/config-init.yaml
@@ -94,6 +94,12 @@ spec:
 {{ toYaml .Values.console.podExtraLabels | nindent 8 }}
 {{- end }}
     spec:
+{{- if .Values.configInit }}
+{{- if .Values.configInit.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.configInit.nodeSelector | trim  | indent 8 }}
+{{- end }}
+{{- end }}
       containers:
       - env:
         - name: "STRATOS_VOLUME_MIGRATION"
@@ -120,7 +126,7 @@ spec:
           value: "/{{ .Release.Name }}-encryption-key-volume/console.crt"
         - name: CONSOLE_PROXY_CERT_KEY_PATH
           value: "/{{ .Release.Name }}-encryption-key-volume/console.key"
-        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{default "stratos-config-init" .Values.images.configInit}}:3.1.0-0d657242b-cap
+        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{default "stratos-config-init" .Values.images.configInit}}:3.2.0-76049dc49-cap
         command: ["/config-init.sh"]
         imagePullPolicy: {{.Values.imagePullPolicy}}
         livenessProbe: ~
@@ -170,6 +176,10 @@ spec:
         app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
         helm.sh/chart:  "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     spec:
+{{- if .Values.configInit }}
+      nodeSelector:
+{{ toYaml .Values.configInit.nodeSelector | indent 8 }}
+{{- end }}
       containers:
       - env:
         - name: "NAMESPACE"
@@ -180,7 +190,7 @@ spec:
           value: "{{ .Release.Revision }}"
         - name: "RELEASE_VERSION"
           value: "{{ .Chart.AppVersion }}"
-        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{default "stratos-config-init" .Values.images.configInit}}:3.1.0-0d657242b-cap
+        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{default "stratos-config-init" .Values.images.configInit}}:3.2.0-76049dc49-cap
         command: ["/config-init.sh", "--delete"]
         imagePullPolicy: {{.Values.imagePullPolicy}}
         livenessProbe: ~
