--- a/stable/console/templates/database.yaml
+++ b/stable/console/templates/database.yaml
@@ -49,9 +49,15 @@ spec:
         {{ toYaml .Values.console.podExtraLabels | nindent 8 }}
         {{- end}}        
     spec:
+{{- if .Values.mariadb }}
+{{- if .Values.mariadb.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.mariadb.nodeSelector | trim | indent 8 }}
+{{- end }}
+{{- end }}
       containers:
       - name: mariadb
-        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.mariadb}}:3.1.0-0d657242b-cap
+        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.mariadb}}:3.2.0-76049dc49-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         env:
         - name: MYSQL_ROOT_PASSWORD
