--- a/stable/kubecf/Chart.yaml
+++ b/stable/kubecf/Chart.yaml
@@ -3,4 +3,4 @@ appVersion: 2.0.0-rc3
 description: A Helm chart for KubeCF
 icon: https://raw.githubusercontent.com/cloudfoundry-incubator/kubecf/master/icon/kubecf.png
 name: kubecf
-version: v2.2.2
+version: 2.2.2
